# 0603project

./: catkin.bash  chmod.bash  full_autonomous.launch  openConfig.sh  openWayPoints.sh  readme.txt  record.bash  semi_autonomous.launch  waypoint_collection.sh
src/control/constrained_speed/: CMakeLists.txt  README.md
src/control/constrained_speed/cfg/: cs_method2.params  cs_method2.yaml
src/control/constrained_speed/include/: CSMethod2.hpp  DEFINEs.hpp  Publish.hpp
src/control/constrained_speed/launch/: constrained_speed.launch
src/control/constrained_speed/script/: plot_curvature.py
src/control/constrained_speed/src/: CSMethod2.cpp  ConstrainedSpeedNode.cpp
src/control/constrained_speed/test/: constrained_speed.test  test.cpp
src/control/ecu_communication/: CMakeLists.txt
src/control/ecu_communication/config/: ecu_communication.params
src/control/ecu_communication/include/: AutonomousControl.hpp  CommunicationProcess.hpp  DEFINEs.hpp  DataDownload.hpp  DataUpload.hpp  RemoteControl.hpp  SerialPortCommunication.hpp  ThreeOne.hpp  UDPCommunication.hpp
src/control/ecu_communication/launch/: tang_ecu_communication.launch
src/control/ecu_communication/src/: AutonomousControl.cpp  CommunicationProcess.cpp  DataDownload.cpp  DataUpload.cpp  ECUCommunication.cpp  RemoteControl.cpp  RemoteReceive.cpp
src/control/path_tracking/: CMakeLists.txt  package.xml
src/control/path_tracking/config/: config.yaml  path_tracking.rviz
src/control/path_tracking/include/: filter_and_estimate.h  ipopt_solver.h  lateral_control_core.h  path_tracking.h  pure_pursuit.h  ribbon.h
src/control/path_tracking/launch/: path_tracking_debug.launch  path_tracking_node.launch  path_tracking_rviz.launch  pysim.launch
src/control/path_tracking/msg/: observer.msg
src/control/path_tracking/script/: compare_path.py  plot_path.py  python_sim.py
src/control/path_tracking/src/: communication_pub.cpp  communication_sub_real.cpp  communication_sub_sim.cpp  filter_and_estimate.cpp  ipopt_solver_polynomial.cpp  ipopt_solver_refer_point.cpp  ipopt_solver_refer_point_dynamic.cpp  ipopt_solver_spline.cpp  lateral_control_core.cpp  lateral_control_node.cpp  pure_pursuit.cpp  ribbon.cpp
src/msgs/control_msgs/: CMakeLists.txt  package.xml
src/msgs/control_msgs/msg/: ControlMode.msg  ControlSpeed.msg  ControlSteer.msg  Report.msg  ReportBrake.msg  ReportControl.msg  ReportHMI.msg  ReportMotion.msg  ReportThrottle.msg  ReportVehicleWorkMode.msg  ReportWheel.msg
src/msgs/three_one_msgs/: CMakeLists.txt  README.md
src/msgs/three_one_msgs/msg/: Control.msg  ControlSpeed.msg  ControlSteer.msg  ControlSuspension.msg  ControlWeapon.msg  Report.msg  ReportControlData.msg  ReportCylinderPosition.msg  ReportCylinderPressure.msg  ReportDistance.msg  ReportGiveBack.msg  ReportMotion.msg  ReportVehicleState.msg
src/planning/a_star_double_xml/: CMakeLists.txt  package.xml  taskfile_manual.txt
src/planning/a_star_double_xml/include/: AttachXmlFile.h  MapMatch.h  MapSearchNode.h  PubMsg.h  astardoublexml.h  fsa.h  stlastar.h  thread.h  ui_astardoublexml.h
src/planning/a_star_double_xml/launch/: a_star_double_xml.launch
src/planning/a_star_double_xml/src/: AttachXmlFile.cpp  MapMatch.cpp  MapSearchNode.cpp  PubMsg.cpp  astardoublexml.cpp  main.cpp  thread.cpp
src/planning/a_star_double_xml/task_file_dir/: KYXZ2018A.txt  txtSender.py
src/planning/a_star_double_xml/task_file_record/: 2018_7_12_2.txt  2018_7_14_1.txt  2018_7_15.txt  2018_7_17_1.txt  GPS_ceshi0718_2.txt  GPS_robust_coal_Aug17.txt  KYXZ2016A.txt  TaskPoints  TaskPoints_Aug04.txt  TaskPoints_Aug05.txt  TaskPoints_Aug2.txt  TaskPoints_GPS_fengtai_Sep06.txt  TaskPoints_July31  TaskPoints_fengtai_Aug21.txt  TaskPoints_fengtai_Aug24.txt  TaskPoints_fengtai_Aug27.txt  TaskPoints_test  TaskPoints_test_quanbu  TaskPoints_test_replannning_Aug18.txt  TaskPoints_yuebingcun_Sep09.txt  testpoint_realtime
src/planning/a_star_double_xml/ui/: astardoublexml.ui
src/planning/dependent_package/car_model/: CMakeLists.txt  package.xml
src/planning/dependent_package/gps_utils/: CMakeLists.txt
src/planning/dependent_package/internal_grid_map/: CMakeLists.txt
src/planning/dependent_package/opt_solver/: CMakeLists.txt
src/planning/dependent_package/opt_utils/: CMakeLists.txt  csv_reader.md
src/planning/dependent_package/tinyspline_ros/: CMakeLists.txt
src/planning/dependent_package/transform_tools/: CMakeLists.txt
src/planning/dependent_package/visual_tools/: CMakeLists.txt  README.md  package.xml
src/planning/dependent_package/voronoi/: CMakeLists.txt  package.xml
src/planning/guidance_point/: CMakeLists.txt
src/planning/guidance_point/config/: path_display.rviz
src/planning/guidance_point/launch/: guidance_point.launch
src/planning/guidance_point/src/: cg_solver.cpp  guidance_point_selection.cpp  laser_beam_method.cpp
src/planning/local_path_planner/: CMakeLists.txt
src/planning/local_path_planner/include/: common_function.hpp  local_planner_node.hpp  path_planner_visual_tools.hpp  roadnet_handler.hpp  search_based_method.hpp
src/planning/local_path_planner/launch/: local_planner_node.launch
src/planning/local_path_planner/rviz/: local_path_planner_viz.rviz
src/planning/local_path_planner/src/: common_function.cpp  local_planner_node.cpp  path_planner_visual_tools.cpp  roadnet_handler.cpp  ros_topic_retelated.cpp  search_based_method.cpp
src/planning/local_path_planner/test/: visualization_node.cpp
src/planning/map_server/: CMakeLists.txt
src/planning/map_server/config/: common_config.yaml
src/planning/map_server/launch/: auto_max_speed.launch  map_server_node.launch  spy_and_patrol.launch
src/planning/map_server/src/: display_thread.cpp  map_server_node.cpp  ros_interface.cpp
src/planning/space_explore/: CMakeLists.txt  README.md  package.xml
src/planning/space_explore/cfg/: Visual.params  detailed_demo.rviz  modified_path_demo_viz.rviz
src/planning/space_explore/launch/: modified_path_demo.launch  (+1 more)
src/planning/state_sampling/: CMakeLists.txt
src/planning/waypoint_manager/: CMakeLists.txt
(+3467 files in other folders)
