<?xml version="4.0.20190308"?>
<package format="2">
    <name>path_tracking</name>
    <version>0.0.1</version>
    <description>path_tracking</description>
    <author email="todo@todo.com">todo</author>
    <maintainer email="todo@todo.com">todo</maintainer>
    <!-- The export tag contains other, unspecified, tags -->

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>rospy</depend>
    <depend>roslib</depend>
    <depend>message_generation</depend>
    <depend>message_runtime</depend>
    <depend>std_msgs</depend>
    <depend>anm_msgs</depend>
    <depend>nav_msgs</depend>
    <depend>dbw_mkz_msgs</depend>
    <depend>sensor_msgs</depend>
    <depend>sensor_driver_msgs</depend>
    <depend>plan2control_msgs</depend>
    <depend>control_msgs</depend>

</package>
