<?xml version="1.0"?>
<package format="2">
    <name>space_explore</name>
    <version>0.0.1</version>
    <description>space_explore</description>
    <author email="yu.zhang.bit@gmail.com">Yu Zhang</author>
    <maintainer email="yu.zhang.bit@gmail.com">Yu Zhang</maintainer>
    <!-- The export tag contains other, unspecified, tags -->

    <!-- One license tag required, multiple allowed, one license per tag -->
    <!-- Commonly used license strings: -->
    <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
    <license>TBD</license>

    <buildtool_depend>catkin</buildtool_depend>
    <depend>roscpp</depend>
    <depend>opt_utils</depend>
    <depend>roslib</depend>
    <depend>internal_grid_map</depend>
    <depend>grid_map_ros</depend>
    <depend>nav_msgs</depend>
    <depend>visual_tools</depend>
    <depend>rosparam_handler</depend>
    <depend>dynamic_reconfigure</depend>
    <depend>voronoi</depend>
    <depend>tinyspline_ros</depend>
</package>
